<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_food"
        tools:context=".FoodActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtTitleFood" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="32dp" android:hint="Title of the food"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtDescriptionFood"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleFood"
            app:layout_constraintEnd_toEndOf="@+id/txtTitleFood"
            app:layout_constraintStart_toStartOf="@+id/txtTitleFood"
            android:hint="Description of the food"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDescriptionFood" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:id="@+id/listFoodIngredients"
            tools:listitem="@layout/item_ingredient_list"/>
</android.support.constraint.ConstraintLayout>