<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.FoodListFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:text="Filter"
            android:layout_width="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/listFood" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Title" android:textSize="30sp"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtFilter" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="type a name of a recipe or ingreient" android:autofillHints=""
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/listFood"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/listFood" tools:listitem="@layout/item_food_llist"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFilter"/>
    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@android:drawable/ic_menu_add"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
    />
</android.support.constraint.ConstraintLayout>