<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="16dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/txtQuantity" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textSize="14sp" android:autofillHints=""/>
            <Spinner
                    android:layout_width="101dp"
                    android:layout_height="wrap_content" android:id="@+id/spinnerMesurement"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/txtQuantity"
                    android:layout_marginTop="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
            <EditText
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/txtName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/spinnerMesurement" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" android:textSize="14sp" android:autofillHints=""/>
            <ImageView
                    android:layout_width="41dp"
                    android:layout_height="41dp" app:srcCompat="@drawable/ic_add_orange_24dp"
                    android:id="@+id/imgAddIngredient" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintStart_toEndOf="@+id/txtName"
                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>