<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.DecideFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:text="@string/click_the_decide_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/lblMenu"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnDecide" app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintVertical_bias="0.431"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textSize="30sp"
            android:textAlignment="center"/>
    <Button
            android:text="@string/decide"
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:id="@+id/btnDecide"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
</android.support.constraint.ConstraintLayout>