<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.FoodDetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/txtTitleFood"
            android:hint="@string/title_of_the_food"
            android:autofillHints="" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:inputType="textMultiLine"
            android:id="@+id/txtDescriptionFood"
            android:hint="@string/description_of_the_food" android:autofillHints=""
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtTitleFood"
            app:layout_constraintStart_toStartOf="@+id/txtTitleFood"
            app:layout_constraintEnd_toEndOf="@+id/txtTitleFood"/>
</android.support.constraint.ConstraintLayout>