<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/save" android:id="@+id/action_save" android:icon="@android:drawable/ic_menu_save"
          app:showAsAction="ifRoom|withText"/>
    <item android:title="@string/edit" app:showAsAction="ifRoom|withText" android:icon="@android:drawable/ic_menu_edit"
          android:id="@+id/action_edit"/>
</menu>